static contec bug on iphone, changed to position relative gap 30vw

--- a/src/styles/mobileNavBar.scss
+++ b/src/styles/mobileNavBar.scss
@@ -76,9 +76,9 @@ height: 8vh;
     display: flex;
     align-items: center;
     justify-content: space-around;
-    position: absolute;
+    position: relative;
     width: 100%;
-    top: 0%;
+    gap: 30vw;    
 }
 .nbion
 {
